# app-protector-drm

./: .gitignore  BMUDHT.docx  CLAUDE.md  README.md
certs/: server.crt
desktop/: README.md  api.py  config.py  dpapi.py  launcher_bridge.py  main.py  session.py
docs/: HUONG-DAN-CHAY-VA-TEST.md  HUONG-DAN-DOC-CODE.md  architecture.md  demo-script.md  threat-model.md
launcher/: CMakeLists.txt  README.md
launcher/include/: pk_entitlement.h  pk_fingerprint.h  pk_runner.h  pk_server_key.h
launcher/src/: entitlement.c  fingerprint.c  main.c  runner.c
protector/: CMakeLists.txt  README.md
protector/include/: pk_archive.h  pk_crypto.h  pk_manifest.h  pk_util.h
protector/keys/: manifest_ed25519.pk
protector/src/: archive.c  crypto.c  main.c  manifest.c  util.c
sample-app/DemoApp/: readme.txt
sample-app/src/: DemoApp.c
server/: .env.example  requirements.txt  run.py
server/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
server/app/routes/: admin.py  auth.py  dashboard.py  library.py  packages.py  runtime.py
server/app/services/: audit.py  packer.py  ratelimit.py  storage.py  tokens.py
server/app/templates/: audit.html  devices.html  index.html  layout.html  login.html  products.html  users.html
server/tests/: conftest.py  test_phase1.py  test_phase5.py  test_phase6.py  test_phase7.py
shared/: manifest.example.json
tools/: gen_cert.py  publish.py
